tests/negative/resource_compound_assignment.ora
resource TokenUnit = u256;

contract ResourceCompoundAssignment {
    storage var balances: map<address, Resource<TokenUnit>>;

    pub fn bad(to: address, amount: TokenUnit) {
        balances[to] += amount;
    }
}
